--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,53 +1,18 @@
-.player {
-    pointer-events: none;
+.text_cp {
+    text-align: center;
+    font-weight: 700;
 }
 
-.card-body:hover {
-    color: blue;
-    cursor: pointer;
+.col-4 {
+    display: grid;
+    text-align: center;
 }
 
-.card:hover {
-    cursor: pointer;
+i {
+    font-size: 30px !important;
+    color: darkmagenta;
 }
 
-.header {
-    z-index: 100;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background: aquamarine;
-    width: 100%;
-    box-shadow: 0 4px 9px rgba(192, 192, 192, 0.2);
-    height: 100px;
-}
-
-.body {
-    margin-top: 200px;
-}
-
-.widget {
-    z-index: 1000;
-    position: fixed;
-    top: 15rem;
-    right: 0;
-    background: bisque;
-    width: 90px;
-    height: 350px;
-}
-
-.footer {
-    position: absolute;
-    left: 0;
-    background: blue;
-    width: 100%;
-    box-shadow: 0 4px 9px rgba(192, 192, 192, 0.2);
-    height: 200px;
-}
-
-.toper {
-    height: 40px;
-    width: 100%;
-    background-color: #06396a;
-    min-width: 1000px;
+.hidden {
+    display: none;
 }
